Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -146,7 +146,7 @@
     }
    ],
    "source": [
-    "ba_latitude = [-34.6037]\n",
+    "ba_latitude = se[-34.6037]\n",
     "ba_latitude"
    ]
   },
