--- a/index.ipynb
+++ b/index.ipynb
@@ -131,22 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-34.6037]"
+       "{-34.6037}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ba_latitude = se[-34.6037]\n",
+    "ba_latitude = set([-34.6037])\n",
     "ba_latitude"
    ]
   },
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "ba_longitude = [-58.3816]\n",
+    "ba_longitude = ([-58.3816]\n",
     "ba_longitude"
    ]
   },
