--- a/index.ipynb
+++ b/index.ipynb
@@ -152,22 +152,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-58.3816]"
+       "{-58.3816}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ba_longitude = ([-58.3816]\n",
+    "ba_longitude = set([-58.3816])\n",
     "ba_longitude"
    ]
   },
